--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^9.6.1",
+    "firebase": "^10.12.2",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.23",
-    "lucide-react": "^0.105.0-alpha.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "jspdf-autotable": "^3.8.2",
+    "lucide-react": "^0.395.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -17,10 +17,23 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": { "extends": ["react-app", "react-app/jest"] },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
@@ -28,3 +41,4 @@
     "tailwindcss": "^3.2.4"
   }
 }
+
